--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+ 
+
 * {
   font-family: "Roboto", serif;
 }
+
 
 body {
   /* background-image: url('./assets/cristo-redentor.jpg');
@@ -12,7 +15,7 @@ body {
   display: block;
 }
 
-.main-image {
+.firstImage {
   width: 100%;
   height: 660px;
   object-fit: fill;
@@ -24,14 +27,14 @@ h1, h2, h3 {
   font-size: 36px;
 }
 
+#brasil {
+  text-align: center;
+  font-size: 15px;
+}
+
 p {
   margin-bottom: 40px;
   font-size: 25px;
-}
-
-#main {
-  text-align: center;
-  font-size: 30px;
 }
 
 .h2 {
@@ -41,14 +44,17 @@ p {
 
 img {
   width: 100%;
-  height: 660px;
+  height: 400px;
   border-radius: 1rem;
 }
 
 ul {
-  margin-left: 20px;
+  font-family: "Inter", serif;
   font-size: 25px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
-
+#cuidado {
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
